--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -5,41 +5,41 @@
    <img src="assets/img/services/service-1.jpg" style="width:580px;">
    </div>
     <div class="col-xs-12 col-sm-6 participategridright " >
-      <h3 class="h4 mb-2">Step: Evaluate your security posture</h3>
-     <p class=" mb-5">See to benchmark your own security posture using our method</p>
-	 <ul>
-            <li>CIS as our basis </li>
-			<li>Easy-to-evaluate (yes/no) questions</li>
-			<li>Template provided</li>
-           </ul>
-    </div>
-    
-  </div>
-</div>
-
-</section>
-<section class="bg-participate">
-<div class="container serviceshomecol ">
-  <div class="row row-mid-6">
-    <div class="col-xs-12 col-sm-6 participategridleft " >
       <h3 class="h4 mb-2">Steps</h3>
+     
 	 <ul>
             <li class="h5">Step 1: Sign up</li>
 			<ul>
 			<li>Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</li>
 			</ul>
-			<li>Importance of standardizing the measurements across firms</li>
-			<li>We provide templates and real-time support to help teams at firms calculate their monetary losses</li>
-           </ul>
-		   <p class=" mb-5">Templates: </p>
-		   <ul>
-            <li>Excel</li>
-			<li>CSV</li>
+            <li class="h5">Step 2: Evaluate your security posture</li>
+			<ul>
+			<li>Instructions & background materials</li>
+			</ul>		
+            <li class="h5">Step 3: Estimate and allocate your cyber losses</li>
+			<ul>
+			<li>Instructions and background materials</li>
+			</ul>		
+            <li class="h5">Step 4: Fill in a computation template'
+        text: 'Templates</li>
+			<ul>
+			<li>Templates</li>
+			</ul>
+            <li class="h5">Step 5: Login to the platform and select your computation</li>
+			<ul>
+			<li>Account information</li>
+			</ul>
+            <li class="h5">Step 6: Encrypt and upload your template</li>
+			<ul>
+			<li>Platform instructions</li>
+			</ul>
+            <li class="h5">Step 7: Receive the results</li>
+			<ul>
+			<li>Interpreting the results</li>
+			</ul>
+			
            </ul>
     </div>
-	<div class="col-xs-12 col-sm-6" >
-   <img src="assets/img/services/service-1.jpg" style="width:580px;">
-   </div>
     
   </div>
 </div>
