--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -5,12 +5,11 @@
    <img src="assets/img/services/service-1.jpg" style="width:580px;">
    </div>
     <div class="col-xs-12 col-sm-6 participategridright " >
-      <h3 class="h4 mb-2">Steps</h3>
      
 	 <ul>
             <li class="h5">Step 1: Sign up</li>
 			<ul>
-			<li>Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</li>
+			<li class="mb-4">Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</li>
 			</ul>
             <li class="h5">Step 2: Evaluate your security posture</li>
 			<ul>
