--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10240,3 +10240,6 @@ a.btn.btn-xl.js-scroll-trigger.btn-light:hover{
     color: #a82d41;
     border: 2px solid #a82d41;
 }
+.liststyle{
+list-style: none;
+}
