--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -6,34 +6,34 @@
    </div>
     <div class="col-xs-12 col-sm-6 participategridright " >
      
-	 <ul>
+	 <ul class="liststyle">
             <li class="h5">Step 1: Sign up</li>
-			<ul>
+			<ul class="liststyle">
 			<li class="mb-4">Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</li>
 			</ul>
             <li class="h5">Step 2: Evaluate your security posture</li>
-			<ul>
+			<ul class="liststyle">
 			<li>Instructions & background materials</li>
 			</ul>		
             <li class="h5">Step 3: Estimate and allocate your cyber losses</li>
-			<ul>
+			<ul class="liststyle">
 			<li>Instructions and background materials</li>
 			</ul>		
             <li class="h5">Step 4: Fill in a computation template'
         text: 'Templates</li>
-			<ul>
+			<ul class="liststyle">
 			<li>Templates</li>
 			</ul>
             <li class="h5">Step 5: Login to the platform and select your computation</li>
-			<ul>
+			<ul class="liststyle">
 			<li>Account information</li>
 			</ul>
             <li class="h5">Step 6: Encrypt and upload your template</li>
-			<ul>
+			<ul class="liststyle">
 			<li>Platform instructions</li>
 			</ul>
             <li class="h5">Step 7: Receive the results</li>
-			<ul>
+			<ul class="liststyle">
 			<li>Interpreting the results</li>
 			</ul>
 			
