--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -13,28 +13,28 @@
 			</ul>
             <li class="h5">Step 2: Evaluate your security posture</li>
 			<ul class="liststyle">
-			<li>Instructions & background materials</li>
+			<li class="mb-4">Instructions & background materials</li>
 			</ul>		
             <li class="h5">Step 3: Estimate and allocate your cyber losses</li>
 			<ul class="liststyle">
-			<li>Instructions and background materials</li>
+			<li class="mb-4">Instructions and background materials</li>
 			</ul>		
             <li class="h5">Step 4: Fill in a computation template'
         text: 'Templates</li>
 			<ul class="liststyle">
-			<li>Templates</li>
+			<li class="mb-4">Templates</li>
 			</ul>
             <li class="h5">Step 5: Login to the platform and select your computation</li>
 			<ul class="liststyle">
-			<li>Account information</li>
+			<li class="mb-4">Account information</li>
 			</ul>
             <li class="h5">Step 6: Encrypt and upload your template</li>
 			<ul class="liststyle">
-			<li>Platform instructions</li>
+			<li class="mb-4">Platform instructions</li>
 			</ul>
             <li class="h5">Step 7: Receive the results</li>
 			<ul class="liststyle">
-			<li>Interpreting the results</li>
+			<li class="mb-4">Interpreting the results</li>
 			</ul>
 			
            </ul>
