--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -19,8 +19,7 @@
 			<ul class="liststyle">
 			<li class="mb-4">Instructions and background materials</li>
 			</ul>		
-            <li class="h5">Step 4: Fill in a computation template'
-        text: 'Templates</li>
+            <li class="h5">Step 4: Fill in a computation template</li>
 			<ul class="liststyle">
 			<li class="mb-4">Templates</li>
 			</ul>
