--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -2,43 +2,43 @@
 <div class="container serviceshomecol ">
   <div class="row row-mid-6">
   <div class="col-xs-12 col-sm-6" >
-   <img src="assets/img/services/service-1.jpg" style="width:580px;">
-   </div>
-    <div class="col-xs-12 col-sm-6 participategridright " >
-     
-	 <ul class="liststyle">
-            <li class="h5">Step 1: Sign up</li>
-			<ul class="liststyle">
-			<li class="mb-4">Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</li>
-			</ul>
-            <li class="h5">Step 2: Evaluate your security posture</li>
-			<ul class="liststyle">
-			<li class="mb-4">Instructions & background materials</li>
-			</ul>		
-            <li class="h5">Step 3: Estimate and allocate your cyber losses</li>
-			<ul class="liststyle">
-			<li class="mb-4">Instructions and background materials</li>
-			</ul>		
-            <li class="h5">Step 4: Fill in a computation template</li>
-			<ul class="liststyle">
-			<li class="mb-4">Templates</li>
-			</ul>
-            <li class="h5">Step 5: Login to the platform and select your computation</li>
-			<ul class="liststyle">
-			<li class="mb-4">Account information</li>
-			</ul>
-            <li class="h5">Step 6: Encrypt and upload your template</li>
-			<ul class="liststyle">
-			<li class="mb-4">Platform instructions</li>
-			</ul>
-            <li class="h5">Step 7: Receive the results</li>
-			<ul class="liststyle">
-			<li class="mb-4">Interpreting the results</li>
-			</ul>
-			
-           </ul>
-    </div>
+  <table class="c">
+
+  <tr>
+    <td>Step 1: Sign up</td>
+    <td>Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</td>
+    </tr>
     
+  <tr>
+    <td>Step 2: Evaluate your security posture</td>
+    <td>Instructions & background materials</td>
+    </tr>
+
+  <tr>
+    <td>Step 3: Estimate and allocate your cyber losses</td>
+    <td>Instructions and background materials</td>
+    </tr>
+  
+  <tr>
+    <td>Step 4: Fill in a computation template</td>
+    <td>Templates</td>
+    </tr>
+  <tr>
+    <td>Step 5: Login to the platform and select your computation</td>
+    <td>Account information</td>
+    </tr>
+    
+      <tr>
+    <td>Step 6: Encrypt and upload your template</td>
+    <td>Platform instructions</td>
+    </tr>
+    
+      <tr>
+    <td>Step 7: Receive the results</td>
+    <td>Interpreting the results</td>
+    </tr>
+
+</table>
   </div>
 </div>
 
