--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10243,3 +10243,7 @@ a.btn.btn-xl.js-scroll-trigger.btn-light:hover{
 .liststyle{
 list-style: none;
 }
+table.c {
+  table-layout: auto;
+  width: 100%;  
+}
