--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -1,7 +1,7 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
-<div class="container serviceshomecol ">
-  <div class="row row-mid-6">
-  <div class="col-xs-12 mid-6" >
+
+<div class="row justify-content-center">
+      <div class="col-lg-8">
   <table class="c">
 
   <tr>
