--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -1,6 +1,7 @@
 <section class="page-section {{ section.background_style }}" id="{{ section.section_id }}">
 
-<div class="row justify-content-center">
+  <div class="container">
+    <div class="row justify-content-center">
       <div class="col-lg-8">
   <table class="c">
 
@@ -41,6 +42,6 @@
 </table>
   </div>
 </div>
-
+</div>
 </section>
 
