--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto my-2 my-lg-0">
+      <ul class="navbar-nav ml-auto my-2 my-lg-0 mobilenav">
         {% for item in site.data.menus.header  %}
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="{{ item.url | relative_url }}">{{ item.title }}</a>
