--- a/_includes/research.html
+++ b/_includes/research.html
@@ -2,9 +2,16 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <div class="mb-4 "><p>In 2015 and 2016, MIT held a series of sector-specific workshops focused on protecting critical infrastructure led by Joel Brenner <a href="https://internetpolicy.mit.edu/reports/Report-IPRI-CIS-CriticalInfrastructure-2017-Brenner.pdf" target="_blank">(report)</a>. The workshops included presentations by CISOs from four distinct economic sectors (electricity, oil and gas, finance, and communications) who discussed the challenges they faced securing and defending their networks. A common theme began to emerge across all four sector-specific meetings. The CISOs stated that deploying security controls was akin to “investing in the dark,” because they lacked the necessary illumination into the defensive postures and related losses of other firms that would only be available if firms shared information. Despite this, the CISOs of these firms were also reluctant to share information because of the sensitive nature of their own data. </p>
-        
-<p>It was clear that addressing the problem would require a multidisciplinary team to design a solution. We brought together specialists in financial risk, cryptography, and computer security from across MIT to design and build a new platform using cutting-edge cryptographic techniques that could be used to securely and privately calculate aggregated metrics on cyber defenses and loss data, without requiring firms to disclose their own data. This new SCRAM platform provides clarity and visibility on how firms as a whole defend themselves, as well as improves the understanding of the relationship between control failures and financial losses.</p> 
+        <div class="mb-4 ">
+		<h3>Read more about our ongoing research in the August 2020 edition of the Harvard Data Science Review: <h3>
+		Castro, L. de, Lo, A. W., Reynolds, T., Susan, F., Vaikuntanathan, V., Weitzner, D. J., & Zhang, N. (2020). SCRAM: A Platform for Securely Measuring Cyber Risk . Harvard Data Science Review.<br><br>
+		<a href="https://hdsr.mitpress.mit.edu/pub/gylaxji4/release/1" class="btn btn-xl js-scroll-trigger btn-research">Read More</a>
+
+<h3>Abstract:</h3> 
+We develop a new cryptographic platform called SCRAM (Secure Cyber Risk Aggregation and Measurement) that allows multiple entities to compute aggregate cyber risk measures without requiring any entity to disclose its own sensitive data on cyber attacks, penetrations, and losses. We present results from two computations using the SCRAM platform: (1) benchmarks of the adoption rates of 171 critical security measures across six large firms; and (2) links between monetary losses from 49 security incidents and the specific subcontrol failures implicated in the incident. These results provide insight into problematic cyber-risk control areas that need additional scrutiny and/or investment, but do so in a completely anonymized and privacy-preserving platform.
+<a href="https://github.com/CSAIL/ipri-scram" class="btn btn-xl js-scroll-trigger btn-research">Review our source code </a>
+
+       
 </div>
       </div>
     </div>
