--- a/_includes/research.html
+++ b/_includes/research.html
@@ -3,18 +3,18 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="mb-4 ">
-		<h3>Read more about our ongoing research in the August 2020 edition of the Harvard Data Science Review: <h3>
+		<h3>Read more about our ongoing research in the August 2020 edition of the Harvard Data Science Review: </h3>
 		Castro, L. de, Lo, A. W., Reynolds, T., Susan, F., Vaikuntanathan, V., Weitzner, D. J., & Zhang, N. (2020). SCRAM: A Platform for Securely Measuring Cyber Risk . Harvard Data Science Review.<br><br>
 		<a href="https://hdsr.mitpress.mit.edu/pub/gylaxji4/release/1" class="btn btn-xl js-scroll-trigger btn-research">Read More</a>
 
 <h3>Abstract:</h3> 
-We develop a new cryptographic platform called SCRAM (Secure Cyber Risk Aggregation and Measurement) that allows multiple entities to compute aggregate cyber risk measures without requiring any entity to disclose its own sensitive data on cyber attacks, penetrations, and losses. We present results from two computations using the SCRAM platform: (1) benchmarks of the adoption rates of 171 critical security measures across six large firms; and (2) links between monetary losses from 49 security incidents and the specific subcontrol failures implicated in the incident. These results provide insight into problematic cyber-risk control areas that need additional scrutiny and/or investment, but do so in a completely anonymized and privacy-preserving platform.
+We develop a new cryptographic platform called SCRAM (Secure Cyber Risk Aggregation and Measurement) that allows multiple entities to compute aggregate cyber risk measures without requiring any entity to disclose its own sensitive data on cyber attacks, penetrations, and losses. We present results from two computations using the SCRAM platform: (1) benchmarks of the adoption rates of 171 critical security measures across six large firms; and (2) links between monetary losses from 49 security incidents and the specific subcontrol failures implicated in the incident. These results provide insight into problematic cyber-risk control areas that need additional scrutiny and/or investment, but do so in a completely anonymized and privacy-preserving platform.<br><br>
 <a href="https://github.com/CSAIL/ipri-scram" class="btn btn-xl js-scroll-trigger btn-research">Review our source code </a>
 
        
 </div>
       </div>
     </div>
-    {% include actions.html actions=section.actions %}
+<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="//MIT/security">Understand our security</a></center></div>
   </div>
 </section>
