--- a/_includes/call-to-action-technology.html
+++ b/_includes/call-to-action-technology.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
-        <div class="text-white-50 mb-4 ">{{ section.text | markdownify }}</div>
+        <div class="text-white-50 mb-4 text-center">{{ section.text | markdownify }}</div>
       </div>
     </div>
 
