--- a/_includes/security.html
+++ b/_includes/security.html
@@ -22,6 +22,6 @@
 </div>
       </div>
     </div>
-    {% include actions.html actions=section.actions %}
+<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/MIT/participate">Join a computation</a></center></div>
   </div>
 </section>
