--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -3,6 +3,11 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
+	  
+	  <p>Building on the success of our earlier computations, we are assembling a larger group of companies in key sectors to participate in the next round of computations. All participants will be able to compare their own security posture against their peer group and will receive an actionable analysis of defensive areas that should be considered for additional investment and scrutiny based on actual losses throughout the group. Participants will also be able to see how different sectors compare to one another.</p>
+
+<p>The working group is by invitation only, but if you think your company may be a good fit, please reach out to us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a>. 
+</p>
   <table class="c">
 
   <tr>
