--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -8,45 +8,34 @@
 
 <p>The working group is by invitation only, but if you think your company may be a good fit, please reach out to us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a>. 
 </p>
-  <table class="c">
-
-  <tr>
-    <td>Step 1: Sign up</td>
-    <td>Contact us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> to join a computation</td>
-    </tr>
-    
-  <tr>
-    <td>Step 2: Evaluate your security posture</td>
-    <td>Instructions & background materials</td>
-    </tr>
-
-  <tr>
-    <td>Step 3: Estimate and allocate your cyber losses</td>
-    <td>Instructions and background materials</td>
-    </tr>
   
-  <tr>
-    <td>Step 4: Fill in a computation template</td>
-    <td>Templates</td>
-    </tr>
-  <tr>
-    <td>Step 5: Login to the platform and select your computation</td>
-    <td>Account information</td>
-    </tr>
-    
-      <tr>
-    <td>Step 6: Encrypt and upload your template</td>
-    <td>Platform instructions</td>
-    </tr>
-    
-      <tr>
-    <td>Step 7: Receive the results</td>
-    <td>Interpreting the results</td>
-    </tr>
-
-</table>
   </div>
+  
 </div>
 </div>
+<div class="row" >
+    <div class="col-xs-12 col-sm-6">
+	<h2 class="text-white mt-0 text-center">Prepare for an existing computation</h2>
+    <hr class="divider my-4">
+	<h3>Cyber Risk Benchmarking 2020</h3>
+	<ul>
+	<li>Documents
+	<ol><li>Estimating losses (xlsx)</li>
+	<li>Template <a href="https://drive.google.com/file/d/1DKkjudOVX2hAXbHf74wNIDT6H5qP7zR0/view" target="_blank">(csv)</a></li></ol></li>
+	<li>Instructional videos
+	<ol><li>Overview</li>
+	<li>Estimating losses</li>
+	<li>Filling out the template</li>
+	<li>Running the computation</li></ol></li>
+	<li>Upcoming dates</li>
+	</ul>
+	</div>
+    <div class="col-xs-12 col-sm-6">
+	<h2 class="text-white mt-0 text-center">Join a new computation</h2>
+    <hr class="divider my-4">
+	<p>Please reach out to us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> if you are interested in joining future computations, or if you have suggestions for new computations that could be run on the platform. 
+</p>
+	</div>
+  </div>
 </section>
 
