--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -13,9 +13,10 @@
   
 </div>
 </div>
+<div class="container">
 <div class="row" >
     <div class="col-xs-12 col-sm-6">
-	<h2 class="text-white mt-0 text-center">Prepare for an existing computation</h2>
+	<h2 class="mt-0 text-center">Prepare for an existing computation</h2>
     <hr class="divider my-4">
 	<h3>Cyber Risk Benchmarking 2020</h3>
 	<ul>
@@ -36,6 +37,7 @@
 	<p>Please reach out to us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> if you are interested in joining future computations, or if you have suggestions for new computations that could be run on the platform. 
 </p>
 	</div>
+  </div>
   </div>
 </section>
 
