--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -14,7 +14,7 @@
 </div>
 </div>
 <div class="container">
-<div class="row" >
+<div class="row justify-content-center" >
     <div class="col-xs-12 col-sm-6">
 	<h2 class="mt-0 text-center">Prepare for an existing computation</h2>
     <hr class="divider my-4">
