--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -15,7 +15,7 @@
 </div>
 <div class="container">
 <div class="row justify-content-center" >
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-lg-8 col-xs-12 col-sm-6">
 	<h2 class="mt-0 text-center">Prepare for an existing computation</h2>
     <hr class="divider my-4">
 	<h3>Cyber Risk Benchmarking 2020</h3>
@@ -31,7 +31,7 @@
 	<li>Upcoming dates</li>
 	</ul>
 	</div>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-lg-8 col-xs-12 col-sm-6">
 	<h2 class="mt-0 text-center">Join a new computation</h2>
     <hr class="divider my-4">
 	<p>Please reach out to us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> if you are interested in joining future computations, or if you have suggestions for new computations that could be run on the platform. 
