--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -16,10 +16,10 @@
 
 <div class="container paddingdesktop">
 <div class="row justify-content-center" >
-    <div class="col-xs-12 col-sm-6">
-	<h2 class="mt-0 text-center">Prepare for an existing computation</h2>
+    <div class="col-xs-12 col-sm-6 lcontent">
+	<h2 class="h3 mt-0 text-center">Prepare for an existing computation</h2>
     <hr class="divider my-4">
-	<h3>Cyber Risk Benchmarking 2020</h3>
+	<h3 class="h4">Cyber Risk Benchmarking 2020</h3>
 	<ul>
 	<li>Documents
 	<ol><li>Estimating losses (xlsx)</li>
@@ -33,7 +33,7 @@
 	</ul>
 	</div>
     <div class="col-xs-12 col-sm-6">
-	<h2 class="mt-0 text-center">Join a new computation</h2>
+	<h2 class="h4 mt-0 text-center">Join a new computation</h2>
     <hr class="divider my-4">
 	<p>Please reach out to us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> if you are interested in joining future computations, or if you have suggestions for new computations that could be run on the platform. 
 </p>
