--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -32,7 +32,7 @@
 	<li>Upcoming dates</li>
 	</ul>
 	</div>
-    <div class="col-xs-12 col-sm-6">
+    <div class="col-xs-12 col-sm-6 rcontent">
 	<h2 class="h4 mt-0 text-center">Join a new computation</h2>
     <hr class="divider my-4">
 	<p>Please reach out to us at <a href="mailto:scram@mit.edu" target="_blank">scram@mit.edu</a> if you are interested in joining future computations, or if you have suggestions for new computations that could be run on the platform. 
