--- a/_includes/research.html
+++ b/_includes/research.html
@@ -15,6 +15,6 @@ We develop a new cryptographic platform called SCRAM (Secure Cyber Risk Aggregat
 </div>
       </div>
     </div>
-<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="//MIT/security">Understand our security</a></center></div>
+<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/MIT/security">Understand our security</a></center></div>
   </div>
 </section>
