--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <!-- no footer at all! -->
 <footer class="bg-light py-5">
   <div class="container">
-    <div class="small text-center text-muted">
+    <div class="small text-left text-muted">
+	<div>
       {{ site.data.footer.copyright }}
       &nbsp;<br />
       {% for link in site.data.footer.links %}
@@ -9,6 +10,16 @@
           {% if new_window_is_not_empty %}target="_blank" rel="noopener"
           {% endif %}>{{ link.text }}</a>
       {% endfor %} 
+	</div>
+	<div>
+	{{ site.data.footer.copyright }}
+      &nbsp;<br />
+      {% for link in site.data.footer.links %}
+          <a href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
+          {% if new_window_is_not_empty %}target="_blank" rel="noopener"
+          {% endif %}>{{ link.text }}</a>
+      {% endfor %} 
+	</div>
     </div>
   </div>
 </footer>
