--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer class="bg-light py-5">
   <div class="container">
     <div class="small text-left text-muted">
-	<div>
+	<div class="col-xs-12 col-sm-6">
       {{ site.data.footer.copyright }}
       &nbsp;<br />
       {% for link in site.data.footer.links %}
@@ -11,7 +11,7 @@
           {% endif %}>{{ link.text }}</a>
       {% endfor %} 
 	</div>
-	<div>
+	<div class="col-xs-12 col-sm-6">
 	{{ site.data.footer.copyright }}
       &nbsp;<br />
       {% for link in site.data.footer.links %}
