--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,11 +8,8 @@
       
 	</div>
 	<div class="col-xs-12 col-sm-6">
-      {% for link in site.data.footer.links %}
-          <a href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
-          {% if new_window_is_not_empty %}target="_blank" rel="noopener"
-          {% endif %}>{{ link.text }}</a>
-      {% endfor %} 
+      
+          <a href="{{ link.url }}" target="_blank" rel="noopener">{{ link.text }}</a>
 	</div>
     </div>
   </div>
