--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,7 @@
       
 	</div>
 	<div class="col-xs-12 col-sm-6">
-      
-          <a href="{{ link.url }}" target="_blank" rel="noopener">{{ link.text }}</a>
+          <a href="https://accessibility.mit.edu/" target="_blank" rel="noopener">Accesibility</a>
 	</div>
     </div>
   </div>
