--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,13 @@
 <!-- no footer at all! -->
 <footer class="bg-light py-5">
   <div class="container">
-    <div class="row small text-left text-muted ">
+    <div class="small text-left text-muted ">
 	
 	<div class="col-xs-12 col-sm-6">
       {{ site.data.footer.copyright }}
-      
 	</div>
 	<div class="col-xs-12 col-sm-6">
-          <a href="https://accessibility.mit.edu/" target="_blank" rel="noopener">Accesibility</a>
+	{{ site.data.footer.content }}
 	</div>
     </div>
   </div>
