--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,9 +5,21 @@
 	
 	<div class="col-xs-12 col-sm-6">
       {{ site.data.footer.copyright }}
+      &nbsp;<br />
+      {% for link in site.data.footer.links %}
+          <a href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
+          {% if new_window_is_not_empty %}target="_blank" rel="noopener"
+          {% endif %}>{{ link.text }}</a>
+      {% endfor %} 
 	</div>
 	<div class="col-xs-12 col-sm-6">
-	{{ site.data.footer.content }}
+	{{ site.data.footer.copyright2 }}
+      &nbsp;<br />
+      {% for link2 in site.data.footer.links2 %}
+          <a href="{{ link2.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
+          {% if new_window_is_not_empty %}target="_blank" rel="noopener"
+          {% endif %}>{{ link2.text2 }}</a>
+      {% endfor %} 
 	</div>
     </div>
   </div>
