--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,11 +5,15 @@
 	
 	<div class="col-xs-12 col-sm-6">
       {{ site.data.footer.copyright }}
-
-     
+      &nbsp;<br />
+      
 	</div>
 	<div class="col-xs-12 col-sm-6">
-	{{ site.data.footer.text }}
+	{% for link in site.data.footer.links %}
+          <a href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
+          {% if new_window_is_not_empty %}target="_blank" rel="noopener"
+          {% endif %}>{{ link.text }}</a>
+      {% endfor %} 
 	</div>
     </div>
   </div>
