--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- no footer at all! -->
 <footer class="bg-light py-5">
   <div class="container">
-    <div class="small text-left text-muted ">
+    <div class="row small text-left text-muted ">
 	
 	<div class="col-xs-12 col-sm-6">
       {{ site.data.footer.copyright }}
