--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,14 @@
 <!-- no footer at all! -->
 <footer class="bg-light py-5">
   <div class="container">
-    <div class="row small text-left text-muted ">
-	
-	<div class="col-xs-12 col-sm-6">
+    <div class="small text-center text-muted">
       {{ site.data.footer.copyright }}
       &nbsp;<br />
-	{% for link in site.data.footer.links %}
+      {% for link in site.data.footer.links %}
           <a href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
           {% if new_window_is_not_empty %}target="_blank" rel="noopener"
           {% endif %}>{{ link.text }}</a>
       {% endfor %} 
-      
-	</div>
-	<div class="col-xs-12 col-sm-6">
-      {{ site.data.footer.copyright }}
-      &nbsp;<br />
-	{% for link in site.data.footer.links %}
-          <a href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
-          {% if new_window_is_not_empty %}target="_blank" rel="noopener"
-          {% endif %}>{{ link.text }}</a>
-      {% endfor %} 
-	</div>
     </div>
   </div>
 </footer>
