--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="small text-left text-muted">
       {{ site.data.footer.copyright }}
-      &nbsp;
+      &nbsp; | &nbsp; 
       {% for link in site.data.footer.links %}
           <a class="footerlink" href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
           {% if new_window_is_not_empty %}target="_blank" rel="noopener"
