--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- no footer at all! -->
 <footer class="bg-light py-5">
   <div class="container">
-    <div class="small text-left text-muted">
+    <div class="small text-center text-muted">
       {{ site.data.footer.copyright }}
       &nbsp; | &nbsp; 
       {% for link in site.data.footer.links %}
