--- a/_includes/technologyservices.html
+++ b/_includes/technologyservices.html
@@ -11,7 +11,7 @@
 		
 		<p>SCRAM mimics the traditional aggregation technique, but works exclusively on encrypted data that it cannot see. The system takes in encrypted data from the participants, runs a blind computation on it, and returns an encrypted result that must be unlocked by each participant separately before anyone can see the answer. The security of the system comes from the requirement that the keys from all the participants are needed in order to unlock any of the data. Participants guarantee their own security by agreeing to unlock only the result using their privately held key. </p>
 		
-		<p class="container"><img src="assets/img/Technology-Image.png" style="width:100%;text-align:center;">
+		<center><p class="container"><img src="assets/img/Technology-Image.png" style="width:100%;"></center>
 		
 		<p>Cryptographic tools such as multi-party computation and public-key cryptography provide a way to perform mathematical operations on encrypted data without ever exposing the underlying data. While there are a variety of solutions to the challenge of secure computation, we choose an approach for SCRAM that provides simple, straightforward security guarantees as well as support for complex computation. The steps of our computations are provided below: 
 </p>
