--- a/_includes/aside-technology.html
+++ b/_includes/aside-technology.html
@@ -1,6 +1,11 @@
-<section id="{{ section.section_id }}" class="page-section bg-dark {{ section.background_style }}" style="color:#212529;">
+<section id="{{ section.section_id }}" class="page-section bg-dark {{ section.background_style }}" style="color:#fff;">
   <div class="container ">
     <h2 class="mb-4 text-center">{{ section.title }}</h2>
+	  <div class="row" style="background-color:#212529;color:#000;">
+    <div class="col-xs-12 col-sm-6 col-lg-4" ><h3>01</h3></div>
+    <div class="col-xs-12 col-sm-6 col-lg-8" >Each firm individually generates its own key pair, where each key pair contains a public encryption key and a private decryption key.</div>
+  </div>
+	
 	<ol>
 	<li class="mb-4">Each firm individually generates its own key pair, where each key pair contains a public encryption key and a private decryption key.</li>
 	<li class="mb-4">All firms submit their public keys to the server.</li>
