--- a/_includes/aside-technology.html
+++ b/_includes/aside-technology.html
@@ -2,7 +2,7 @@
   <div class="container ">
     <h2 class="mb-4 text-center">{{ section.title }}</h2>
 	  <div class="row" style="background-color:#c5c7c7;color:#212529;">
-    <div class="col-xs-12 col-sm-6 col-lg-3" ><h3>01</h3></div>
+    <div class="col-xs-12 col-sm-6 col-lg-3 text-center" ><h3>01</h3></div>
     <div class="clearfix col-xs-12 col-sm-6 col-lg-7" >Each firm individually generates its own key pair, where each key pair contains a public encryption key and a private decryption key.</div>
   </div>
 	
