--- a/_includes/aside-technology.html
+++ b/_includes/aside-technology.html
@@ -7,8 +7,8 @@
   </div>
   
   	  <div class="row" style="background-color:#c5c7c7;color:#fff;padding:20px;margin:20px;">
-    <div class="col-xs-12 col-sm-6 col-lg-3 " style="text-align:center;"><h3 class="h2">01</h3></div>
-    <div class="clearfix col-xs-12 col-sm-6 col-lg-7" >Each firm individually generates its own key pair, where each key pair contains a public encryption key and a private decryption key.</div>
+    <div class="col-xs-12 col-sm-6 col-lg-3 " style="text-align:center;"><h3 class="h2">02</h3></div>
+    <div class="clearfix col-xs-12 col-sm-6 col-lg-7" >All firms submit their public keys to the server.</div>
   </div>
 	
 	<ol>
