--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -40,7 +40,7 @@
 	</div>
   </div>
   </div>
-  <div class="bottombtn"><center><a class="btn btn-xl btn-research" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log in to an existing computation</a></center></div>
+  <div class="bottombtn patbtn"><center><a class="btn btn-xl btn-research" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log in to an existing computation</a></center></div>
 
 </section>
 
