--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -41,7 +41,7 @@
 	</div>
 	
   </div>
-  <center><a class="btn btn-xl btn-research" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log in to an existing computation</a></center>
+  <center><a class="btn btn-xl btn-research bottombtn" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log in to an existing computation</a></center>
   </div>
   <div class="bottombtn patbtn"><center><a class="btn btn-xl btn-research" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log in to an existing computation</a></center></div>
 
