--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10274,7 +10274,7 @@ padding: 50px 10px;
 }
 @media (min-width: 1200px){
 .container.navcontainer {
-    max-width: 1400px;
+    max-width: 1400px !important;
 }}
 @media (min-width: 992px){
 .container.navcontainer {
