--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10276,6 +10276,11 @@ padding: 50px 10px;
 .container.navcontainer {
     max-width: 1400px !important;
 }}
+@media (min-width: 1199px){
+.navcontainer {
+    max-width: 1200px !important;
+}}
+
 @media (min-width: 992px){
 .container.navcontainer {
     max-width: 960px;
