--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10284,4 +10284,8 @@ padding: 50px 10px;
 div#navbarResponsive {
     position: relative;
     right: -26px;
-}}
+}
+.techimg{
+width:100% !important;
+}
+}
