--- a/_includes/call-to-actionabout.html
+++ b/_includes/call-to-actionabout.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8 {{ section.text_style | default: 'text-center' }}">
         <div class="text-white-50 mb-4 text-left text-center">
-		<p>SCRAM was built by a cross-disciplinary team at MIT to run secure and private computations</p>
+		<p>SCRAM was built by a cross-disciplinary team at MIT to run secure and private computations.</p>
 		</div>
       </div>
     </div>
