--- a/_includes/security.html
+++ b/_includes/security.html
@@ -18,7 +18,7 @@
 <p>The computation requires a network to pass information back and forth to perform the operations on the encrypted data. The only data ever transmitted over the network is either strongly encrypted or is the public key of the clients, which can only be used to encrypt data, not decrypt it. The network uses TLS (Transport Layer Security) for a second layer of encryption to protect the encrypted data in transit. We take additional measures to ensure the security of the network and your data. </p>
 <br><br>
  <h2>Review & audit our code</h2>
- <p>We believe that firms should be able to audit our code to ensure that their data is handled correctly and safely, so we <a href="https://github.com/CSAIL/ipri-scram" target="_blank">published the source code</a> for their review</p>
+ <p>We believe that firms should be able to audit our code to ensure that their data is handled correctly and safely, so we <a href="https://github.com/CSAIL/ipri-scram" target="_blank">published the source code</a> for their review.</p>
 </div>
       </div>
     </div>
