--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- no footer at all! -->
 <footer class=" py-5" style="background:#a82d41;">
   <div class="container">
-    <div class="small text-center text-muted">
+    <div class="small text-center text-white">
       {{ site.data.footer.copyright }}
       &nbsp; | &nbsp; 
       {% for link in site.data.footer.links %}
