--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       {{ site.data.footer.copyright }}
       &nbsp; | &nbsp; 
       {% for link in site.data.footer.links %}
-          <a class="footerlink" href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
+          <a class="footerlink" style="color:#fff;" href="{{ link.url }}" {% assign new_window_is_not_empty = link.new_window | is_not_empty %}
           {% if new_window_is_not_empty %}target="_blank" rel="noopener"
           {% endif %}>{{ link.text }}</a>
       {% endfor %} 
