--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- no footer at all! -->
-<footer class="bg-light py-5">
+<footer class=" py-5" style="background:#eeeeee;">
   <div class="container">
     <div class="small text-center text-muted">
       {{ site.data.footer.copyright }}
