--- a/assets/css/creative.scss
+++ b/assets/css/creative.scss
@@ -10055,9 +10055,9 @@ header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to bottom, rgba(247, 247, 247, 0) 0%, rgba(115, 117, 117, 0.40) 100%), url("../img/bg-clienthero.jpg");
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-attachment: default;
   background-size: cover;
 }
 header.masthead h1 {
