--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,7 @@
       </ul>
 	  
     </div>
-	<div class="navbar-right"><a class="btn btn-xl btn-nav" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log in to a computation
+	<div class="navbar-right"><a class="btn btn-xl btn-nav" href="https://securecompute.mit.edu/" target="_blank">Log in to a computation
 </a></div>
 <div class="navbar-right nav-2logo"><a href="https://internetpolicy.mit.edu" target="_blank"><img src="assets/img/ipri-square-socialmedia.png" alt="" style="width:80px;margin-left:10px;margin-right:10px;"></a></div>
   </div>
