--- a/_includes/participateservices.html
+++ b/_includes/participateservices.html
@@ -42,7 +42,7 @@
 	
   </div>
   </div>
-    <p><center><a class="btn btn-xl btn-research bottombtn" href="https://scram.mit.edu/accounts/login/?next=/" target="_blank">Log in to an existing computation</a></center></p>
+    <p><center><a class="btn btn-xl btn-research bottombtn" href="https://securecompute.mit.edu/" target="_blank">Log in to an existing computation</a></center></p>
 
 </section>
 
