Fix the page logo and other broken links

--- a/_includes/members.html
+++ b/_includes/members.html
@@ -15,6 +15,6 @@
       {% endfor %}
 	      {% include actions.html actions=section.actions %}
     </div>
-	<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/MIT/technology">Learn more about our technology</a></center></div>
+	<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/technology">Learn more about our technology</a></center></div>
   </div>
 </section>
