--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
   <div class="container navcontainer">
-    <a class="navbar-brand js-scroll-trigger" href="/MIT/"><img src="assets/img/scramlogo.png" alt="" style="width:200px;"></a>
+    <a class="navbar-brand js-scroll-trigger" href="/"><img src="assets/img/scramlogo.png" alt="" style="width:200px;"></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
