--- a/_includes/security.html
+++ b/_includes/security.html
@@ -22,6 +22,6 @@
 </div>
       </div>
     </div>
-<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/MIT/participate">Join a computation</a></center></div>
+<div class="bottombtn"><center><a class="btn btn-xl btn-research" href="/participate">Join a computation</a></center></div>
   </div>
 </section>
